# excel-web-pivot

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  ingest.py  jobs.py  main.py  meta.py  pivot_engine.py  routes.py
backend/ddl/: 001_init.sql
backend/scripts/: make_sample.py
frontend/: Dockerfile  Dockerfile.production  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  theme.css
frontend/src/components/: PivotView.tsx  SaveBadge.tsx  TableView.tsx  UploadZone.tsx
sample_data/: sales_sample.xlsx
