[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "clickhouse-connect>=0.7.16",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "xlrd>=2.0.1",
    "python-multipart>=0.0.9",
    "xlsb-reader>=0.3.0",
]
